--- a/pipeline-build-and-deploy.yml
+++ b/pipeline-build-and-deploy.yml
@@ -1,23 +1,23 @@
 ---
 resources:
-- name: pcfapp
-  type: git
-  source:
-    uri: https://github.com/shinyay/pcf-workshop-upgrade-code.git
-    branch: master
-  check_every: 10s
-- name: deploy-to-cf
-  type: cf
-  source:
-    api: api.run.pivotal.io
-    username: <YOUR_USERID>
-    password: <YOUR_PASSWD>
-    organization: <YOUR_ORG>
-    space: development
-    skip_cert_check: true
+  - name: pcfapp
+    type: git
+    source:
+      uri: https://github.com/shinyay/pcf-workshop-upgrade-code.git
+      branch: master
+    check_every: 10s
+  - name: deploy-to-cf
+    type: cf
+    source:
+      api: api.run.pivotal.io
+      username: <YOUR_USERID>
+      password: <YOUR_PASSWD>
+      organization: <YOUR_ORG>
+      space: development
+      skip_cert_check: true
 jobs:
-- name: unit-test
-  plan:
+  - name: unit-test
+    plan:
   - get: pcfapp
     trigger: true
   - task: gradle-test
@@ -35,9 +35,9 @@ jobs:
         - -c
         - |
           cd pcfapp
-          ./gradlew tasks
-- name: build-and-deploy
-  plan:
+          ./gradlew test
+  - name: build-and-deploy
+    plan:
   - get: pcfapp
     passed: [ unit-test ]
     trigger: true
@@ -57,6 +57,7 @@ jobs:
         - |
           cd pcfapp
           ./gradlew clean build -x test
+          ls -lR
   - put: deploy-to-cf
     params:
       manifest: pcfapp/manifest.yml
